# lsys

./: Cargo.toml  to_dot.py  to_svg.sh
golang/: :w  main.go  sqlite3.db
golang/files/css/: book.css
golang/files/img/: missing
golang/html/: add.gohtml  book.gohtml  list.gohtml
golang/service/: lsys.go
golang/templates/: nav.gohtml
golang/util/: accounts.go  assoc.go  extra.go  plugins.go  template.go
rust/: .gitignore  Cargo.toml  schema.sql
rust/files/: 404.html
rust/files/css/: login.css
rust/src/: main.rs  sql.rs  time.rs  types.rs
src/: db  main.rs  sql.rs  time.rs
