[package]
name = "lsys"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.4"
maud = { version = "0.26.0", features = ["axum"] }
serde = { version = "1.0.196", features = ["derive"] }
tokio = { version = "1.35.1", features = ["rt-multi-thread"] }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.rusqlite]
version = "0.30.0"
features = ["bundled"]


